[tool.poetry]
name = "dio-blog"
version = "0.1.0"
description = ""
authors = ["Igor Nunes <igorlnunes@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "*"
uvicorn = { extras = ["standard"], version = "^0.29.0" }
databases = {extras = ["aiosqlite"], version = "^0.9.0"}
pyjwt = "*"
psycopg2-binary = "*"
pydantic-settings = "*"
alembic = "*"


[tool.poetry.group.dev.dependencies]
pytest-asyncio = "*"
pytest = "*"
httpx = "*"
pytest-mock = "*"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
